gitops/api/service.yaml
apiVersion: v1

kind: Service


metadata:

  name: qoves-api

  namespace: qoves-app



spec:


  selector:


    app: qoves-api



  ports:


  - port: 80

    targetPort: 5000
